--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
+		/>
 		<title>Mithril App TS</title>
 
 		<link
@@ -27,7 +30,6 @@
 		<meta name="theme-color" content="#ffffff" />
 	</head>
 	<body>
-		<div id="app"></div>
 		<script type="module" src="./src/App.ts"></script>
 	</body>
 </html>
